--- a/app/views/logins/new.html.erb
+++ b/app/views/logins/new.html.erb
@@ -1,2 +1,14 @@
-<h1>Login#new</h1>
-<p>Find me in app/views/login/new.html.erb</p>
+<h1>Log in</h1>
+
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <%= form_for(:login, url: login_create_path) do |f| %>
+            <%= f.label :email %>
+            <%= f.email_field :email, class: 'form-control' %>
+            <%= f.label :password %>
+            <%= f.password_field :password, class: 'form-control' %>
+            <%= f.submit "Log in", class: "btn btn-primary" %>
+        <% end %>
+        <p>New user? <%= link_to "Sign up now!", root_path %></p>
+    </div>
+</div>
