--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,39 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h1>プロフィール編集</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <%= form_for(@user,url:users_update_path) do |f| %>
+                    <div class="mb-3">
+                        <%= f.label :"画像の変更" %>
+                        <%= f.file_field :image , id: :@user_image %>
+                    </div>
+                    <div class="mb-3">
+                        <%= f.label :"ユーザ名" %><span class="badge badge-danger">必須</span>
+                        <%= f.text_field :name, class: 'form-control' %>
+                    </div>
+                    <div class="mb-3">
+                        <%= f.label :"メールアドレス" , class: "form-label" %><span class="badge badge-danger">必須</span>
+                        <%= f.text_field :email, class: 'form-control' %>
+                    </div>
+                    <div class="mb-3">
+                        <%= f.label :"パスワード更新" %><span class="badge badge-danger">必須</span>
+                        <%= f.password_field :password, class: 'form-control' %>
+                    </div>
+                    <div class="mb-3">
+                        <%= f.label :"パスワード確認用" %><span class="badge badge-danger">必須</span>
+                        <%= f.password_field :password_confirmation, class: 'form-control' %>
+                    </div>
+                    <div class="mb-3">
+                        <%= f.label :"自己紹介" %>  
+                        <textarea placeholder="ここに何か入力してね" class="form-control" name="post[content]" id="exampleFormControlTextarea1" rows="5"></textarea>
+                    </div>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                        <%= f.submit "更新", class: "btn btn-primary" %>
+                    </div>
+                    <% end %>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
