--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container marketing">
+    <div class="row featurette">
+                <%= link_to "編集", users_edit_path(current_user.id) %><br>
+        <div class="lead">
+            <%= @user.content %>
+        </div>
+    <h3>過去の投稿履歴</h3>
+  </div>
+</div>
