--- a/app/views/logins/new.html.erb
+++ b/app/views/logins/new.html.erb
@@ -9,6 +9,6 @@
             <%= f.password_field :password, class: 'form-control' %>
             <%= f.submit "Log in", class: "btn btn-primary" %>
         <% end %>
-        <p>New user? <%= link_to "Sign up now!", root_path %></p>
+        <%= link_to "パスワード忘れた場合", password_reset_new_path %>
     </div>
 </div>
