--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,18 +1,17 @@
 <H1>新規投稿画面</H1>
 <main class="container">
     <div class="starter-template text-center py-5 px-3">
-        <%= form_for(@post, url:posts_create_path) do |f| %>
+        <%= form_for(@post, url: posts_create_path) do |f| %>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label" >投稿画像</label>
                 <%= f.file_field :image %><br>
             </div>
-            <label>カテゴリ<span class="badge badge-danger">必須</span></label>
-            <select class="form-control" name="category[category]">
-                <% @categories.each do |q| %>
-                <option value="<%= q.id %>"><%= q.category %></option>
-                <input type="hidden" name="Post[Category_id]" value="<%=q.id %>">
-                <% end %>
-            </select>
+            <%= f.collection_check_boxes(:category_ids, Category.all, :id, :category) do |category| %> 
+            <%= category.label do %>
+            <%= category.check_box %>
+            <%= category.text %>
+            <% end %>
+            <% end %>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">タイトル<span class="badge badge-danger">必須</span></label>
                 <textarea  id="text" placeholder="タイトルを入れてね" class="form-control" id="title" name="post[title]"></textarea><br>            
@@ -24,7 +23,6 @@
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                 <input type="submit"  name="commit" value="新規投稿" class="btn btn-primary" data-disable-with="新規投稿" disable onclick=jscheack() >
             </div>
-            
         <% end %>
     </div>
 </main>
